<resources>
    <string name="app_name">divvie</string>
    <string name="currency">$</string>
    <string name="percentage">%</string>
    <string name="subtotal">Subtotal</string>
    <string name="subtotal_helper">* before tax and tip!</string>
    <string name="warning">* correct currency format?</string>
    <string name="zero">* cannot be $0.00</string>
    <string name="tax">Tax</string>
    <string name="tip">Tip</string>
    <string name="item_price">Item Price</string>
    <string name="total">Total</string>
    <string name="leftover">$ %1$s leftover</string>
    <string name="guests">Guests</string>
    <string name="enter_name">enter name</string>
    <string name="tap">Tap on each person to split</string>
    <string name="personal_subtotal">Personal Subtotal</string>
    <string name="personal_tip">Personal Tip</string>
    <string name="personal_tax">Personal Tax</string>
    <string name="personal_total">Personal Total</string>

    <!--    buttons-->
    <string name="next">Next</string>
    <string name="done">Done</string>
    <string name="result">Finish</string>
    <string name="individually">Split Items</string>
    <string name="restart">Restart</string>
    <string name="undo">Undo</string>
    <string name="clear_all">Clear</string>
    <string name="back">Back</string>
    <string name="report">Report an issue</string>
    <string name="rate">Rate us</string>
</resources>
