<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <TextView
        android:id="@+id/item_price_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/item_price"
        android:textSize="@dimen/normal_text_size"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/large_margin" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/currency"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingRight="@dimen/small_margin"
            android:gravity="center_vertical"
            android:layout_marginRight="@dimen/small_margin"
            android:text="@string/currency"
            android:textSize="@dimen/large_text_size" />

        <com.felili.divvie.DivvieEditText
            android:id="@+id/edit_item"
            android:imeOptions="actionDone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:padding="0dp"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:inputType="numberDecimal"
            android:textSize="@dimen/large_text_size" />
    </LinearLayout>

    <TextView
        android:id="@+id/item_helper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:text="@string/leftover"
        android:textSize="@dimen/small_text_size"/>

    <Button
        android:id="@+id/next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/next"/>

    <Button
        android:id="@+id/done"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/done"
        android:visibility="gone"/>

</LinearLayout>
