<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">


    <TextView
        android:id="@+id/subtotal_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/subtotal"
        android:textSize="@dimen/normal_text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/subtotal_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/currency"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingRight="@dimen/small_margin"
            android:gravity="center_vertical"
            android:layout_marginRight="@dimen/small_margin"
            android:text="@string/currency"
            android:textSize="@dimen/large_text_size" />

        <com.felinix.divvie.DivvieEditText
            android:id="@+id/edit_subtotal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:inputType="numberDecimal"
            android:nextFocusRight="@+id/edit_tax"
            android:nextFocusDown="@+id/edit_tax"
            android:nextFocusForward="@+id/edit_tax"
            android:padding="0dp"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:textSize="@dimen/large_text_size" />
    </LinearLayout>

    <TextView
        android:id="@+id/subtotal_helper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/subtotal_helper"
        android:textSize="@dimen/small_text_size"
        app:layout_constraintTop_toBottomOf="@id/linearLayout"/>
</androidx.constraintlayout.widget.ConstraintLayout>
