<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tip_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tip"
        android:textSize="@dimen/normal_text_size" />

    <LinearLayout
        android:id="@+id/currency_tip_group"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_weight="1">

        <TextView
            android:id="@+id/currency"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/currency"
            android:textSize="@dimen/large_text_size" />

        <EditText
            android:id="@+id/edit_tip_currency"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="0.0"
            android:inputType="numberDecimal"
            android:textSize="@dimen/large_text_size" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/percentage_tip_group"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:visibility="gone"
        android:layout_weight="1">

        <EditText
            android:id="@+id/edit_tip_percentage"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:hint="0"
            android:inputType="numberDecimal"
            android:textAlignment="textEnd"
            android:layout_weight="0.8"
            android:textSize="@dimen/large_text_size" />

        <TextView
            android:id="@+id/percentage"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/percentage"
            android:layout_weight="0.2"
            android:textSize="@dimen/large_text_size" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/currencyButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="@dimen/small_text_size"
            android:text="@string/currency" />

        <Button
            android:id="@+id/percentageButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="@dimen/small_text_size"
            android:text="@string/percentage" />
    </LinearLayout>

</LinearLayout>
