<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".fragments.ResultFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/subtotal_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/subtotal_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/subtotal_layout"
            app:layout_constraintTop_toTopOf="@id/subtotal_layout"
            android:text="@string/subtotal"
            android:textSize="@dimen/normal_text_size" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/subtotal_layout"
            app:layout_constraintTop_toBottomOf="@id/subtotal_text"
            app:layout_constraintEnd_toEndOf="@id/subtotal_layout"
            app:layout_constraintBottom_toBottomOf="@id/subtotal_layout"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/currency"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/small_margin"
                android:text="@string/currency"
                android:textSize="@dimen/large_text_size" />

            <TextView
                android:id="@+id/subtotal_amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/large_text_size" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/tax_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/tip_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/subtotal_layout">

        <TextView
            android:id="@+id/tax_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/tax_layout"
            app:layout_constraintTop_toTopOf="@id/tax_layout"
            android:text="@string/tax"
            android:textSize="@dimen/normal_text_size" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/tax_layout"
            app:layout_constraintTop_toBottomOf="@id/tax_text"
            app:layout_constraintEnd_toEndOf="@id/tax_layout"
            app:layout_constraintBottom_toBottomOf="@id/tax_layout"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/currency2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/small_margin"
                android:text="@string/currency"
                android:textSize="@dimen/large_text_size" />

            <TextView
                android:id="@+id/tax_amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/large_text_size" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <include
        android:id="@+id/tip_layout"
        layout="@layout/tip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/total_layout"
        app:layout_constraintTop_toBottomOf="@id/tax_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/total_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/space"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/total_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/total_layout"
            app:layout_constraintTop_toTopOf="@id/total_layout"
            android:text="@string/total"
            android:textSize="@dimen/normal_text_size" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/total_layout"
            app:layout_constraintTop_toBottomOf="@id/total_text"
            app:layout_constraintEnd_toEndOf="@id/total_layout"
            app:layout_constraintBottom_toBottomOf="@id/total_layout"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/currency4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/small_margin"
                android:text="@string/currency"
                android:textSize="@dimen/large_text_size" />

            <TextView
                android:id="@+id/total_amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/large_text_size" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <Space
        android:id="@+id/space"
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin"
        app:layout_constraintBottom_toTopOf="@+id/button_group"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/button_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/back" />

        <Button
            android:id="@+id/restart"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/restart" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
